--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "diesel-join"
+name = "diesel_join"
 version = "0.1.0"
 authors = ["sadness_ojisan <sadness.ojisan@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = "1.4.5"
+diesel = { version = "1.4.5", features = ["postgres"] }
 dotenv = "0.15.0"
